--- a/iot-website/package.json
+++ b/iot-website/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@vee-validate/nuxt": "^4.12.6",
+    "chart.js": "^4.4.2",
+    "date-fns": "^3.6.0",
+    "hchs-vue-charts": "^1.2.8",
     "mongoose": "^8.2.4",
     "nuxt": "^3.11.2",
     "sass": "^1.72.0",
     "vue": "^3.4.21",
+    "vue-chart.js": "^0.2.0",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
