--- a/iot-website/package.json
+++ b/iot-website/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.2.4",
     "nuxt": "^3.11.2",
     "sass": "^1.72.0",
+    "sweetalert2": "^11.10.8",
     "vue": "^3.4.21",
     "vue-chart.js": "^0.2.0",
     "vue-chartjs": "^5.3.1",
